# azerothcore-wotlk

./: BOOST_FIX_SUMMARY.md  BOOST_INSTALL_GUIDE.md  CMakeLists.txt  FIREBALL_TRACE_GUIDE.md  GAME_SERVER_STRESS_TEST_REPORT.md  MAP_DATA_EXTRACTION_README.md  MYSQL_FIX_SUMMARY.md  SPELL_EVENT_ARCHITECTURE.md  SPELL_SYSTEM_LEARNING_GUIDE.md  install_boost.sh  run_demo.sh  test_boost_config.sh  test_mysql_config.sh
collision_demo/: entity_collision_demo.go  go.mod  optimized_collision.go
go-combat-demo/: ARCHITECTURE_FIX.md  AZEROTHCORE_SYNC_ANALYSIS.md  BATCH_SYNC_ARCHITECTURE.md  FINAL_ANSWER.md  HEALTH_SYNC_ARCHITECTURE.md  README.md  README_NETWORK.md  batch_sync_demo  batch_sync_demo.go  client_server.go  damage.go  dungeon.go  entities.go  go.mod  health_sync_demo.go  main_network  main_network.go  monster_ai.go  network.go  network_demo  packet_ordering_test.go  raid_sync_demo.go  spell_system.go  unit.go  world.go
go-recast-demo/: MMTILE_LOADING_GUIDE.md  README.md  REAL_IMPLEMENTATION.md  build_real_demo.sh  real_azerothcore_demo.go
src/cmake/macros/: FindMySQL.cmake
